feat: developed the first part of the New structure POC

--- a/src/config/config.json.dist
+++ b/src/config/config.json.dist
@@ -1,8 +1,8 @@
 {
   "auth": {
-    "url": "https://auth.nasajon.qa/auth",
-    "realm": "QA",
+    "url": "https://auth.nasajon.dev/auth",
+    "realm": "DEV",
     "clientId": "meutrabalho_api"
   },
-  "contaURL": "https://conta.nasajon.qa"
+  "contaURL": "https://conta.nasajon.dev"
 }
